chore: restore roundup protos and regenerate
