# src/go/pkg/types/pb/models/notification/notification.pb.go
@@ -1,0 +1,236 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v6.33.4
+// source: models/notification/notification.proto
+
+package notification
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type NotificationType int32
+
+const (
+	NotificationType_NOTIFICATION_TYPE_UNSPECIFIED       NotificationType = 0
+	NotificationType_NOTIFICATION_TYPE_PENDING_INPUT     NotificationType = 1
+	NotificationType_NOTIFICATION_TYPE_PIPELINE_SUCCESS  NotificationType = 2
+	NotificationType_NOTIFICATION_TYPE_PIPELINE_FAILURE  NotificationType = 3
+	NotificationType_NOTIFICATION_TYPE_CONNECTION_ACTION NotificationType = 4
+	NotificationType_NOTIFICATION_TYPE_SHOWCASE_ROUNDUP  NotificationType = 5
+)
+
+// Enum value maps for NotificationType.
+var (
+	NotificationType_name = map[int32]string{
+		0: "NOTIFICATION_TYPE_UNSPECIFIED",
+		1: "NOTIFICATION_TYPE_PENDING_INPUT",
+		2: "NOTIFICATION_TYPE_PIPELINE_SUCCESS",
+		3: "NOTIFICATION_TYPE_PIPELINE_FAILURE",
+		4: "NOTIFICATION_TYPE_CONNECTION_ACTION",
+		5: "NOTIFICATION_TYPE_SHOWCASE_ROUNDUP",
+	}
+	NotificationType_value = map[string]int32{
+		"NOTIFICATION_TYPE_UNSPECIFIED":       0,
+		"NOTIFICATION_TYPE_PENDING_INPUT":     1,
+		"NOTIFICATION_TYPE_PIPELINE_SUCCESS":  2,
+		"NOTIFICATION_TYPE_PIPELINE_FAILURE":  3,
+		"NOTIFICATION_TYPE_CONNECTION_ACTION": 4,
+		"NOTIFICATION_TYPE_SHOWCASE_ROUNDUP":  5,
+	}
+)
+
+func (x NotificationType) Enum() *NotificationType {
+	p := new(NotificationType)
+	*p = x
+	return p
+}
+
+func (x NotificationType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (NotificationType) Descriptor() protoreflect.EnumDescriptor {
+	return file_models_notification_notification_proto_enumTypes[0].Descriptor()
+}
+
+func (NotificationType) Type() protoreflect.EnumType {
+	return &file_models_notification_notification_proto_enumTypes[0]
+}
+
+func (x NotificationType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use NotificationType.Descriptor instead.
+func (NotificationType) EnumDescriptor() ([]byte, []int) {
+	return file_models_notification_notification_proto_rawDescGZIP(), []int{0}
+}
+
+// NotificationRequest is published to topic-notification by any service that wants
+// to notify a user. The notification service decides which channels to use based on
+// the user's per-type, per-channel preferences.
+type NotificationRequest struct {
+	state  protoimpl.MessageState `protogen:"open.v1"`
+	UserId string                 `protobuf:"bytes,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
+	Type   NotificationType       `protobuf:"varint,2,opt,name=type,proto3,enum=fitglue.models.notification.NotificationType" json:"type,omitempty"`
+	Title  string                 `protobuf:"bytes,3,opt,name=title,proto3" json:"title,omitempty"`
+	Body   string                 `protobuf:"bytes,4,opt,name=body,proto3" json:"body,omitempty"`
+	// Arbitrary key-value pairs forwarded to the client (e.g. activity_id for deep-linking).
+	Data          map[string]string `protobuf:"bytes,5,rep,name=data,proto3" json:"data,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"bytes,2,opt,name=value"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *NotificationRequest) Reset() {
+	*x = NotificationRequest{}
+	mi := &file_models_notification_notification_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *NotificationRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*NotificationRequest) ProtoMessage() {}
+
+func (x *NotificationRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_models_notification_notification_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use NotificationRequest.ProtoReflect.Descriptor instead.
+func (*NotificationRequest) Descriptor() ([]byte, []int) {
+	return file_models_notification_notification_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *NotificationRequest) GetUserId() string {
+	if x != nil {
+		return x.UserId
+	}
+	return ""
+}
+
+func (x *NotificationRequest) GetType() NotificationType {
+	if x != nil {
+		return x.Type
+	}
+	return NotificationType_NOTIFICATION_TYPE_UNSPECIFIED
+}
+
+func (x *NotificationRequest) GetTitle() string {
+	if x != nil {
+		return x.Title
+	}
+	return ""
+}
+
+func (x *NotificationRequest) GetBody() string {
+	if x != nil {
+		return x.Body
+	}
+	return ""
+}
+
+func (x *NotificationRequest) GetData() map[string]string {
+	if x != nil {
+		return x.Data
+	}
+	return nil
+}
+
+var File_models_notification_notification_proto protoreflect.FileDescriptor
+
+const file_models_notification_notification_proto_rawDesc = "" +
+	"\n" +
+	"&models/notification/notification.proto\x12\x1bfitglue.models.notification\"\xa4\x02\n" +
+	"\x13NotificationRequest\x12\x17\n" +
+	"\auser_id\x18\x01 \x01(\tR\x06userId\x12A\n" +
+	"\x04type\x18\x02 \x01(\x0e2-.fitglue.models.notification.NotificationTypeR\x04type\x12\x14\n" +
+	"\x05title\x18\x03 \x01(\tR\x05title\x12\x12\n" +
+	"\x04body\x18\x04 \x01(\tR\x04body\x12N\n" +
+	"\x04data\x18\x05 \x03(\v2:.fitglue.models.notification.NotificationRequest.DataEntryR\x04data\x1a7\n" +
+	"\tDataEntry\x12\x10\n" +
+	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
+	"\x05value\x18\x02 \x01(\tR\x05value:\x028\x01*\xfb\x01\n" +
+	"\x10NotificationType\x12!\n" +
+	"\x1dNOTIFICATION_TYPE_UNSPECIFIED\x10\x00\x12#\n" +
+	"\x1fNOTIFICATION_TYPE_PENDING_INPUT\x10\x01\x12&\n" +
+	"\"NOTIFICATION_TYPE_PIPELINE_SUCCESS\x10\x02\x12&\n" +
+	"\"NOTIFICATION_TYPE_PIPELINE_FAILURE\x10\x03\x12'\n" +
+	"#NOTIFICATION_TYPE_CONNECTION_ACTION\x10\x04\x12&\n" +
+	"\"NOTIFICATION_TYPE_SHOWCASE_ROUNDUP\x10\x05BCZAgithub.com/fitglue/server/src/go/pkg/types/pb/models/notificationb\x06proto3"
+
+var (
+	file_models_notification_notification_proto_rawDescOnce sync.Once
+	file_models_notification_notification_proto_rawDescData []byte
+)
+
+func file_models_notification_notification_proto_rawDescGZIP() []byte {
+	file_models_notification_notification_proto_rawDescOnce.Do(func() {
+		file_models_notification_notification_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_models_notification_notification_proto_rawDesc), len(file_models_notification_notification_proto_rawDesc)))
+	})
+	return file_models_notification_notification_proto_rawDescData
+}
+
+var file_models_notification_notification_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_models_notification_notification_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_models_notification_notification_proto_goTypes = []any{
+	(NotificationType)(0),       // 0: fitglue.models.notification.NotificationType
+	(*NotificationRequest)(nil), // 1: fitglue.models.notification.NotificationRequest
+	nil,                         // 2: fitglue.models.notification.NotificationRequest.DataEntry
+}
+var file_models_notification_notification_proto_depIdxs = []int32{
+	0, // 0: fitglue.models.notification.NotificationRequest.type:type_name -> fitglue.models.notification.NotificationType
+	2, // 1: fitglue.models.notification.NotificationRequest.data:type_name -> fitglue.models.notification.NotificationRequest.DataEntry
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_models_notification_notification_proto_init() }
+func file_models_notification_notification_proto_init() {
+	if File_models_notification_notification_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_models_notification_notification_proto_rawDesc), len(file_models_notification_notification_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_models_notification_notification_proto_goTypes,
+		DependencyIndexes: file_models_notification_notification_proto_depIdxs,
+		EnumInfos:         file_models_notification_notification_proto_enumTypes,
+		MessageInfos:      file_models_notification_notification_proto_msgTypes,
+	}.Build()
+	File_models_notification_notification_proto = out.File
+	file_models_notification_notification_proto_goTypes = nil
+	file_models_notification_notification_proto_depIdxs = nil
+}
